left_sidebar: Fix click target of links in the top left sidebar.
Fixes the click targets for the four links in the top left side bar
(All messages, Private messages, Mentions and Starred messages).
The click target now cover the whole row for these links.

Fixes #12449

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -554,3 +554,10 @@ li.show-more-topics a {
 .show-all-streams .fa-chevron-left {
     text-decoration: none;
 }
+
+li.top_left_all_messages a,
+li.top_left_private_messages a,
+li.top_left_mentions a,
+li.top_left_starred_messages a {
+    display: block;
+}
